--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,4 +2,4 @@ image: gitpod/workspace-dotnet
 vscode:
   extensions:
     - muhammad-sammy.csharp
-    - Ionide.Ionide-fsharp@4.6.2:yBkAE6j7z7gJ5WEcyMjEOg==
+    - Ionide.Ionide-fsharp
